# latenttracerag

./: .env.example  .gitignore  ATTRIBUTION.md  CASE_STUDY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs  tsconfig.json  vite.config.ts
backend/: __init__.py  agentic_runner.py  config.py  database.py  document_store.py  efficiency_metrics.py  embedding_diagnostics.py  evaluator.py  latency_profiler.py  latent_trace_runner.py  ollama_client.py  reporting.py  retriever.py  seed_data.py  server.py  telemetry.py  trajectory_store.py
corpus/evaluation/: eval_cases.jsonl  expected_answers.jsonl  questions.jsonl
corpus/reference/: customer_support_policy.txt  finance_risk_controls.txt  internal_ai_usage_policy.txt  legal_contract_review_notes.txt  medical_safety_triage_notes.txt  operations_runbook.txt  product_launch_brief.txt  security_incident_review.txt  software_release_notes.txt  vendor_security_review.txt
frontend/: App.tsx  main.tsx
frontend/assets/: styles.css
frontend/components/: AgenticTraceViewer.tsx  CorpusPanel.tsx  Dashboard.tsx  QueryConsole.tsx  (+6 more)
results/: agentic_overhead_report.md  embedding_diagnostics.json  failure_cases.csv  latest_eval_run.json  latest_eval_summary.md
tests/: conftest.py  test_agentic_runner.py  test_api_health.py  test_database.py  test_document_store.py  test_efficiency_metrics.py  test_evaluator.py  test_latency_profiler.py  test_latent_trace_runner.py  test_retriever.py
(+1 files in other folders)
