[project]
name = "latenttracerag"
version = "0.1.0"
description = "Local RAG evaluation, tracing, and diagnostics framework."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jose Perez"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
